# site

./: .coveragerc  .editorconfig  .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  404.html  CONTRIBUTORS.txt  Dockerfile  LICENSE  Procfile  README.md  README.rst  action_network.py  app.json  bun.lockb  conftest.py  db.sqlite3  docker-compose.yaml  docker-compose.yml  explore.ipynb  google_api_auth.py  heroku.yml  index.html  init_db.sh  justfile  manage.py  mise_activate.sh  mkdocs.yml  notebook.ipynb  notebook.sh  package-lock.json  package.json  playground.ipynb  pyproject.toml  requirements.txt  requirements_backup.txt  startup.sh  tailwind.config.js
.devcontainer/: Dockerfile  cst.yml  devcontainer-lock.json  devcontainer.extend.yaml  devcontainer.json  docker-compose.yaml  docker-compose.yml
.devcontainer-backup/: Dockerfile  devcontainer.json  docker-compose.yml
.envs/.local/: .postgres
.github/ISSUE_TEMPLATE/: other-issues.md
.github/workflows/: build.yml  ci.yml  docker.yml  python-app.yml
about/: apps.py  models.py
about/migrations/: 0003_alter_officers_email.py  0005_alter_officers_position.py  0006_alter_officers_position.py  0007_bylawspage_bylawarticle.py  0013_alter_bylawspage_description.py
actionnetwork/: __init__.py  action_network.py  conftest.py  email.py  test_action_network.py  test_email.py  test_views.py  views.py
actionnetwork/cassettes/: test_events_resource.yaml
committees/: admin.py  apps.py  factories.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
committees/migrations/: 0001_initial.py  0002_auto_20200324_0401.py  0002_committee_shortname.py  0003_auto_20200412_1715.py  0004_auto_20200412_1718.py  0005_auto_20200412_1728.py  0006_committee_formation_type.py  0007_auto_20200412_1841.py  0008_committee_description.py  0009_auto_20200413_0933.py  0010_auto_20200418_1417.py  0011_auto_20200418_1529.py  0012_auto_20200418_1622.py  0013_committeespage.py  0014_auto_20200418_1749.py  0015_delete_committee.py  0016_auto_20200418_1944.py  0018_auto_20200418_2020.py  0020_auto_20201017_1354.py  0023_auto_20201019_0509.py  0027_resourcespage.py  0028_auto_20210809_0310.py  0029_alter_resourcespage_resources.py  0032_remove_committeepage_name.py  0033_delete_committee.py  0034_remove_committeepage_api_key.py  0035_committeepage_leader_name.py  0041_remove_person_taggings_href.py  0042_person_uuid.py  0045_committeespage_description.py  0046_alter_committeespage_description.py  0050_alter_resourcespage_resources.py  0052_alter_committeepage_options.py  0054_alter_committeepage_formation_type.py  0056_committeepage_image.py  0057_remove_committeepage_leader_name_and_more.py  0063_remove_committeepage_leader_and_more.py  0064_delete_committeespage.py  0066_committeepage_email.py  0066_formation.py  (+1 more)
committees/signals/: handlers.py
config/: api_router.py  dev_settings.py  settings.py  settings_base.py  settings_dev.py  settings_docker.py  settings_local.py  settings_prod.py  settings_staging.py  settings_test.py  test_settings.py  urls.py  views.py  wsgi.py
config/settings/: base.py  docker.py  local.py  production.py  test.py
cypress/e2e/: admin.cy.js  home_page.cy.js  login.cy.js  newsletter.cy.js
cypress/support/: commands.js
docs/: conf.py  index.md  index.rst  weekly_email.md
events/: conftest.py  feeds.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
events/api/: serializers.py  tests.py  urls.py  views.py
events/cassettes/: test_call_AN_events_endpoint.yaml  test_get_action_network_events.yaml
events/fixtures/: events.json
events/migrations/: 0001_initial.py  0002_auto_20200302_0213.py  0002_auto_20200324_0936.py  0002_event_uuid.py  0002_eventpage.py  0003_alter_event_id.py  0003_auto_20200413_0046.py  0003_event_formation.py  0004_alter_event_formation.py  0004_auto_20200413_0059.py  0005_alter_event_formation.py  0005_alter_event_id_alter_event_uuid.py  0005_event_formation.py  0005_remove_event_uuid_alter_event_id.py  0006_auto_20200413_0201.py  0006_delete_eventspage.py  0006_rename_formation_event_formation_group.py  0007_event_actionnetwork_id.py  0008_apicalls.py  0009_auto_20200418_1749.py  0010_auto_20210209_1119.py  0011_auto_20210413_1622.py  0012_auto_20210413_1811.py  0013_remove_event_date.py  0014_auto_20210414_0131.py  0015_auto_20210414_0243.py  0016_auto_20210414_0304.py  0017_auto_20210414_0304.py  0018_alter_apicalls_datetime.py  0019_eventspage.py  0020_alter_event_formation.py  0021_alter_event_formation.py  0022_alter_event_formation.py  0023_event_status.py  0024_event_location.py  0025_alter_event_formation.py  0026_alter_event_id.py  0026_alter_event_options_alter_event_id.py  0027_alter_event_id.py  0027_alter_event_options.py  (+1 more)
home/: factories.py  forms.py  models.py  test_home.py  test_models.py  test_urls.py  test_views.py  tests.py  urls.py  views.py  wagtail_hooks.py
home/fixtures/: home_page.json  seed.json
home/migrations/: 0002_homepage_body.py  0003_auto_20210825_1214.py  0004_homepage_action_network_embed_api_endpoint.py  0005_auto_20210827_1701.py  0006_alter_homepage_highlighted_description.py  0008_homepage_call_to_action.py  0009_joinpage.py
news/: __init__.py  apps.py  models.py  receivers.py  signals.py  tests.py  views.py  wagtail_hooks.py
news/fixtures/: updates.json
news/migrations/: 0001_initial.py  0002_auto_20200325_2217.py  0003_blogpage.py  0005_remove_newspage_intro.py  0006_infopage.py  0007_infopage_additional_content.py  0008_auto_20200511_2206.py  0009_documentpage.py  0010_auto_20210204_0022.py  0011_auto_20210412_1827.py  0012_auto_20210412_1935.py  0013_auto_20210412_2233.py  0014_auto_20210412_2254.py  0015_auto_20210412_2304.py  0016_auto_20220621_2031.py  0016_auto_20220706_2159.py  0017_alter_newspage_related_stories.py  0017_auto_20220621_2039.py  (+92 more)
requirements/: base.txt  local.txt  production.txt
search/: search_index.json
stl_dsa/: conftest.py  functional_tests.py  test_integrations.py
stylesheets/: extra.css
utility/: update_action_network_events.sh
weekly_email/: index.html
(+217 files in other folders)
